# twitch-radio

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  LICENSE  README.rst  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: main.yml
bot/: __main__.py  bot.py  cli.py
twitch_radio/: __main__.py  bot.py  cli.py
